# LEDAcrypt

./: LICENSE  README  sha_2_512_sum_KAT_files
Additional_Implementations/: .directory
Additional_Implementations/Benchmarking/: .directory  CMakeLists.txt  benchmark_primitive.sh
Additional_Implementations/Benchmarking/include/: test_kem_cpa.h  test_pkc.h  timing_and_stat.h
Additional_Implementations/KAT_Generation/: CMakeLists.txt  gen_all_kat.sh
Additional_Implementations/KEM-LT/: .directory
Additional_Implementations/KEM-LT/Benchmarking-KEM-LT/: Makefile
Additional_Implementations/KEM-LT/Benchmarking-KEM-LT/include/: test_niederreiter.h
Additional_Implementations/KEM-LT/Benchmarking_Opt-KEM-LT/: .directory  Makefile
Additional_Implementations/KEM-LT/Benchmarking_Opt-KEM-LT/include/: .directory  test_niederreiter.h
Additional_Implementations/KEM-LT/KAT_generation-KEM-LT/: Makefile
Additional_Implementations/KEM-LT/KAT_generation-KEM-LT-Opt/: Makefile  katgen.sh
Additional_Implementations/KEM/Benchmarking-KEM/: .directory  Makefile
Additional_Implementations/KEM/Benchmarking-KEM/include/: test_niederreiter.h
Additional_Implementations/KEM/Benchmarking_Opt-KEM/: Makefile
Additional_Implementations/KEM/Benchmarking_Opt-KEM/include/: test_niederreiter.h
Additional_Implementations/KEM/KAT_generation-KEM/: Makefile
Additional_Implementations/KEM/KAT_generation-KEM-Opt/: Makefile
Additional_Implementations/PKC/: .directory
Additional_Implementations/PKC/Benchmarking-PKC/: .directory  Makefile
Additional_Implementations/PKC/Benchmarking_Opt-PKC/: Makefile  opt.txt  round2.txt  run_benchmarks.sh
Additional_Implementations/PKC/Benchmarking_Opt-PKC/include/: test_mceliece_cca2.h
Additional_Implementations/PKC/KAT_generation-PKC/: .directory  Makefile
Additional_Implementations/PKC/KAT_generation-PKC-Opt/: Makefile
KAT/: .directory  PQCencryptKAT_26_2_0.rsp  PQCencryptKAT_26_2_1.rsp  PQCencryptKAT_26_3_0.rsp  PQCencryptKAT_26_3_1.rsp  PQCencryptKAT_26_4_0.rsp  PQCencryptKAT_26_4_1.rsp  PQCencryptKAT_34_2_0.rsp  PQCencryptKAT_34_2_1.req  PQCencryptKAT_34_2_1.rsp  PQCencryptKAT_34_3_0.rsp  PQCencryptKAT_34_4_0.rsp  PQCkem-KAT_50_2_0.rsp  PQCkem-KAT_50_2_1.rsp  PQCkem-KAT_50_3_0.rsp  PQCkem-KAT_50_3_1.rsp  PQCkem-KAT_50_4_0.rsp  PQCkem-KAT_50_4_1.rsp  PQCkem-KAT_66_2_0.rsp  PQCkem-KAT_66_2_1.rsp  PQCkem-KAT_66_3_0.rsp  PQCkem-KAT_66_3_1.rsp  PQCkem-KAT_66_4_0.rsp  PQCkem-KAT_66_4_1.rsp  PQCkem-KAT_82_2_0.rsp  PQCkem-KAT_82_3_0.rsp  PQCkem-KAT_82_4_0.rsp  PQCkem-cpaKAT_1160_2.rsp  PQCkem-cpaKAT_1680_2.rsp  PQCkem-cpaKAT_1920_3.rsp  PQCkem-cpaKAT_2232_2.rsp  PQCkem-cpaKAT_2680_4.rsp  PQCkem-cpaKAT_2840_3.rsp  PQCkem-cpaKAT_3760_3.rsp  PQCkem-cpaKAT_3968_4.rsp  PQCkem-cpaKAT_5256_4.rsp
KAT/Optimized_KAT/: PQCencryptKAT_25_0.rsp  PQCencryptKAT_25_1.rsp  PQCkem-LT-KAT_25_0.rsp  PQCkem-LT-KAT_33_0.rsp  PQCkem-ephKAT_24_2.rsp  PQCkem-ephKAT_40_3.rsp
KAT/Reference_KAT/: PQCkem-LT-KAT_25_1.rsp  PQCkem-ephKAT_24_3.rsp  PQCkem-ephKAT_24_4.rsp  PQCkem-ephKAT_32_2.rsp  PQCkem-ephKAT_32_3.rsp  PQCkem-ephKAT_32_4.rsp  PQCkem-ephKAT_40_2.rsp  PQCkem-ephKAT_40_4.rsp
Optimized_Implementation/: .directory
Optimized_Implementation/Common/include/: bitslicing_helpers.h  djbsort.h  gf2x_arith.h  gf2x_arith_mod_xPplusOne.h  inverse_exp.h  inverse_powers_mod_p.h  rng.h  sha3.h
Optimized_Implementation/KEM-CPA/include/: niederreiter_decrypt.h  niederreiter_encrypt.h  qc_ldpc_parameters.h
Optimized_Implementation/KEM-LT/: Makefile
Optimized_Implementation/KEM-LT/include/: bf_decoding.h  gf2x_arith.h  gf2x_arith_mod_xPplusOne.h  gf2x_limbs.h  niederreiter.h  niederreiter_decrypt.h  niederreiter_encrypt.h  niederreiter_keygen.h  rng.h
Optimized_Implementation/KEM/include/: api.h  gf2x_arith.h  niederreiter.h  niederreiter_decrypt.h  niederreiter_encrypt.h  niederreiter_keygen.h  qc_ldpc_parameters.h
Optimized_Implementation/PKC/: .directory
Optimized_Implementation/PKC/include/: api.h  architecture_detect.h  bf_decoding.h  constant_weight_codec.h  gf2x_arith_mod_xPplusOne.h  gf2x_limbs.h  mceliece.h  mceliece_cca2_decrypt.h  qc_ldpc_parameters.h  rng.h
Reference_Implementation/Common/include/: H_Q_matrices_generation.h  aes256.h  gf2x_arith.h  gf2x_arith_mod_xPplusOne.h  gf2x_limbs.h  rng.h  sha3.h
Reference_Implementation/KEM-CPA/include/: api.h  bf_decoding.h  niederreiter.h  niederreiter_decrypt.h  niederreiter_encrypt.h  niederreiter_keygen.h  qc_ldpc_parameters.h
Reference_Implementation/KEM-LT/: Makefile
Reference_Implementation/KEM-LT/include/: H_Q_matrices_generation.h  api.h  gf2x_arith.h  gf2x_arith_mod_xPplusOne.h  qc_ldpc_parameters.h
Reference_Implementation/KEM/include/: H_Q_matrices_generation.h  api.h  bf_decoding.h  dfr_test.h  gf2x_arith.h  gf2x_arith_mod_xPplusOne.h  gf2x_limbs.h  niederreiter.h  niederreiter_decrypt.h  niederreiter_encrypt.h  niederreiter_keygen.h  qc_ldpc_parameters.h  rng.h
Reference_Implementation/PKC/: Makefile
Reference_Implementation/PKC/include/: .directory  H_Q_matrices_generation.h  api.h  bf_decoding.h  constant_weight_codec.h  dfr_test.h  gf2x_arith.h  gf2x_arith_mod_xPplusOne.h  gf2x_limbs.h  mceliece.h  mceliece_cca2_decrypt.h  mceliece_cca2_encrypt.h  mceliece_keygen.h  qc_ldpc_parameters.h  sha3.h
